# agentic-ai-part-1

./: .envbackup  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  test_runner.py
01-llm_apps/: 01-LearningMap.md  01-openai-sdk-foundation.py  01-openai_sdk_foundation.py  02-chat_streaming_response.py  02-local_model.py  03-chat_streaming_response.py  04-fast_api_llm_app.py  05-override_default_hyperparameter.py  06-tool_calling.py  project-structure.txt  test_api_client.py
02-langchain_agents/01-langchain_basic/: 01-langchain_setup.py  02-LearningMap.md  02-langchain_asynchronous_llm_call.py  03-langchain_prompt_templates.py  04-langchain_output_parser.py  05-langchain_pydantic_output_parser.py  project-structure.txt
02-langchain_agents/02-langchain_chains/: 01-langchain_llm_chain_lcel.py  02-langchain_llm_sequential_chain_lcel.py  03-LearningMap.md  03-langchain_router_chain_lcel.py  project-structure.txt
02-langchain_agents/03-langchain_memory/: 01-langchain_buffer_memory.py  02-langchain_window_memory.py  03-langchain_summary_memory.py  04-LearningMap.md  04-langchain_hybrid_memory.py  project-structure.txt
03-RAG_systems/01-setup_infrastructure/: 01_basic_embedding.py  02_semantic_visualization.py  05-LearningMap.md
tests/: README.md  __init__.py  conftest.py  test_basic.py
tests/integration/: __init__.py  test_api_endpoints.py
tests/manual/: __init__.py  test_api_client.py
tests/unit/: __init__.py  test_client_initialization.py  test_fastapi_functions.py
